# mai-oop-labs

./: .gitignore
lab1/: CMakeLists.txt  main.cpp
lab1/include/: lab1.h
lab1/src/: lab1.cpp
lab1/tests/: test_lab1.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: binary.h
lab2/src/: binary.cpp
lab2/tests/: binary_test.cpp
lab3/: CMakeLists.txt
lab3/include/: exceptions.h  figure.h  figureArray.h  rectangle.h  square.h  trapezoid.h  triangle.h
lab3/src/: figure.cpp  figureArray.cpp  main.cpp  rectangle.cpp  square.cpp  trapezoid.cpp  triangle.cpp
lab3/tests/: test_geometry.cpp
lab4/: CMakeLists.txt
lab4/include/: figure.hpp  figureArray.hpp  point.hpp  rectangle.hpp  square.hpp  trapezoid.hpp
lab4/src/: main.cpp
lab4/tests/: test_geometry.cpp
lab5/: CMakeLists.txt  main.cpp
lab5/include/: memory_container.h
lab5/src/: memory_container.cpp
lab5/tests/: test_main.cpp
